# slate-roofline

./: .gitignore  CMakeLists.txt  README.md
cmake/: Miscellaneous.cmake
eigensolvers/: Makefile  README.md  counters.txt  pzheevd_aries.f90
lib/AriesNCL/src/: AriesCounters.c  Makefile
matrix-add/: Makefile  README.md  matrix_add.c  matrix_add_aries.c
matrix-add-gpu/: CMakeLists.txt  Makefile  Makefile.cpu  README.md  matrix_add.cu  matrix_add_cpu.c
matrix-add-hsw/: CMakeLists.txt  Makefile  README.md  matrix_add.c  matrix_add_inv.c
papi-example-gpu/: .papi_example.f90.swp  Makefile  papi_example
papi-ib-example/: Makefile  README.md  papi_ib_example.c
papi-ib-example-gpu/: Makefile  README.md  papi_example.c  test_utils.c
pt2pt/: Makefile  README.md  pt2pt.c
scripts/: print_advisor.py  print_counters.py  print_roofline.py
source/: CMakeLists.txt
source/eigensolvers/: configurable_counters
source/lib/AriesNCL/src/: AriesCounters.h
source/matrix-add-cori-gpu/: CMakeLists.txt  README.md  matrix_add_cpu.c
source/matrix-add-gpu/: CMakeLists.txt  Makefile  Makefile.gpu  matrix_add.cu  matrix_add_cpu.c
source/matrix-add-hsw/: CMakeLists.txt  Makefile  matrix_add.c
source/papi-ib-example/: papi_ib_example.c
source/pt2pt/: Makefile
source/timemory-interface/: interface.cpp  interface.h
timemory-interface/: CMakeLists.txt  interface.cpp
